--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ padding-bottom: 15%;
                         var keyWords = row['Keywords'].split(', ');
                         var span = '<p style="width:100%; line-height:2em;">';
                         keyWords.forEach((keyword) => {
-                            span+='#' + keyword + '&nbsp;';
+                            //span+='#' + keyword + '&nbsp;';
                         });
                         span+='</p>';
                         rightDiv.append(h2, p, a, span);
