--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ padding-bottom: 15%;
                 <p>{e} Sebastian Schmieg</p>
                 <p>{f} Grid Spreading</p>
                 <p>{g} Random Quark</p>
-                <p>{h} Robymanlonga</p>
+                <p>{h} Pen Plotter </p>
                 <p>{i} Draw Bot</p>
                 <p>{j} Eno Henze</p>
               </div>
