--- a/index.html
+++ b/index.html
@@ -261,22 +261,22 @@
             width: 50%; /* Set the width of the column */
             background-color: #ffffff; /* Background color */
             padding-left: px; /* Padding to create space inside the column */
-            padding-bottom: 0px;
-            padding-top: 200px;
+            padding-bottom: 0%;
+            padding-top: 5%;
   }
 
   .rightcolumn {
     float: right; /* Float the column to the right */
             width: 50%; /* Set the width of the column */
             background-color: #ffffff; /* Background color */
-            padding-top: 250px;
+            padding-top:8%;
   }
   
   .index{
 font-size: 25px;
 padding-left: 20%;
 padding-top: 0%;
-padding-bottom: 15%;
+padding-bottom: 0%;
 
    }
 
@@ -286,6 +286,7 @@ padding-bottom: 15%;
     position: relative;
     top: 0px;
     left: 10px;
+    min-height: 100vh;
   }
 
 
@@ -316,7 +317,7 @@ padding-bottom: 15%;
                 <p>{e} Sebastian Schmieg</p>
                 <p>{f} Grid Spreading</p>
                 <p>{g} Random Quark</p>
-                <p>{h} Pen Plotter </p>
+                <p>{h} Pen Plotter</p>
                 <p>{i} Draw Bot</p>
                 <p>{j} Eno Henze</p>
               </div>
